# astral-signals

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  astral_signals_desktop.spec  bootstrap_heartmula_backend.ps1  bootstrap_optional_engines.ps1  bootstrap_songgeneration_backend.ps1  build_astral_signals_app.ps1  launch_astral_signals.ps1  launch_astral_signals.sh  pyproject.toml
astral_signals/: __init__.py  acestep.py  audio_tools.py  cli.py  config.py  desktop.py  drafts.py  engine_catalog.py  heartmula.py  heartmula_worker.py  multilingual.py  musicgen.py  ollama.py  pipeline.py  prompting.py  server.py  songgeneration.py  songgeneration_worker.py  voicebox.py
astral_signals/static/: app.js  index.html  styles.css
docs/: discord-forum-post.md
